Successful sorting mode build